
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct device {int dummy; } ;
 int rt5663_readable_register (struct device*,unsigned int) ;

__attribute__((used)) static bool rt5663_v2_readable_register(struct device *dev, unsigned int reg)
{
 switch (reg) {
 case 249:
 case 279:
 case 212:
 case 213:
 case 353:
 case 255:
 case 254:
 case 253:
 case 328:
 case 327:
 case 326:
 case 325:
 case 324:
 case 317:
 case 318:
 case 233:
 case 156:
 case 234:
 case 157:
 case 165:
 case 239:
 case 155:
 case 220:
 case 319:
 case 259:
 case 258:
 case 202:
 case 206:
 case 205:
 case 204:
 case 203:
 case 183:
 case 186:
 case 187:
 case 184:
 case 185:
 case 181:
 case 182:
 case 180:
 case 179:
 case 332:
 case 352:
 case 237:
 case 236:
 case 210:
 case 211:
 case 209:
 case 208:
 case 248:
 case 188:
 case 369:
 case 262:
 case 261:
 case 150:
 case 149:
 case 148:
 case 147:
 case 337:
 case 336:
 case 335:
 case 201:
 case 260:
 case 287:
 case 286:
 case 285:
 case 284:
 case 136:
 case 283:
 case 282:
 case 280:
 case 278:
 case 277:
 case 276:
 case 240:
 case 247:
 case 159:
 case 355:
 case 354:
 case 334:
 case 251:
 case 250:
 case 135:
 case 294:
 case 293:
 case 134:
 case 133:
 case 132:
 case 316:
 case 314:
 case 207:
 case 160:
 case 129:
 case 145:
 case 144:
 case 152:
 case 219:
 case 218:
 case 217:
 case 216:
 case 215:
 case 214:
 case 158:
 case 238:
 case 235:
 case 154:
 case 194:
 case 193:
 case 192:
 case 191:
 case 190:
 case 189:
 case 232:
 case 231:
 case 230:
 case 229:
 case 228:
 case 227:
 case 226:
 case 225:
 case 224:
 case 223:
 case 222:
 case 221:
 case 142:
 case 141:
 case 140:
 case 139:
 case 138:
 case 137:
 case 143:
 case 264:
 case 274:
 case 273:
 case 200:
 case 199:
 case 198:
 case 197:
 case 196:
 case 195:
 case 178:
 case 174:
 case 173:
 case 172:
 case 171:
 case 170:
 case 169:
 case 168:
 case 167:
 case 177:
 case 176:
 case 175:
 case 298:
 case 313:
 case 312:
 case 311:
 case 310:
 case 309:
 case 308:
 case 307:
 case 306:
 case 305:
 case 304:
 case 303:
 case 302:
 case 301:
 case 300:
 case 299:
 case 351:
 case 350:
 case 349:
 case 348:
 case 347:
 case 346:
 case 345:
 case 344:
 case 343:
 case 342:
 case 341:
 case 368:
 case 363:
 case 362:
 case 361:
 case 360:
 case 359:
 case 358:
 case 357:
 case 356:
 case 367:
 case 366:
 case 365:
 case 364:
 case 130:
 case 131:
 case 166:
 case 263:
  return 1;
 case 151:
 case 315:
 case 338:
 case 252:
 case 281:
 case 164:
 case 163:
 case 162:
 case 257:
 case 256:
 case 292:
 case 291:
 case 290:
 case 289:
 case 288:
 case 340:
 case 339:
 case 333:
 case 296:
 case 128:
 case 323:
 case 322:
 case 321:
 case 320:
 case 297:
 case 295:
 case 161:
 case 146:
 case 153:
 case 246:
 case 245:
 case 244:
 case 243:
 case 242:
 case 241:
 case 271:
 case 270:
 case 269:
 case 268:
 case 272:
 case 267:
 case 266:
 case 265:
 case 275:
 case 331:
 case 330:
 case 329:
  return 0;
 default:
  return rt5663_readable_register(dev, reg);
 }
}
